src/wrapper_refcounted/torch_refcounted_api_generated.h

// THIS FILE IS AUTOMATICALLY GENERATED, DO NOT EDIT BY HAND!

value atg___and__(value self, value other);
value atg___and__tensor_(value self, value other);
value atg___iand__(value self, value other);
value atg___iand__tensor_(value self, value other);
value atg___ilshift__(value self, value other);
value atg___ilshift__tensor_(value self, value other);
value atg___ior__(value self, value other);
value atg___ior__tensor_(value self, value other);
value atg___irshift__(value self, value other);
value atg___irshift__tensor_(value self, value other);
value atg___ixor__(value self, value other);
value atg___ixor__tensor_(value self, value other);
value atg___lshift__(value self, value other);
value atg___lshift__scalar_out_(value out, value self, value other);
value atg___lshift__tensor_(value self, value other);
value atg___lshift__tensor_out_(value out, value self, value other);
value atg___or__(value self, value other);
value atg___or__tensor_(value self, value other);
value atg___rshift__(value self, value other);
value atg___rshift__scalar_out_(value out, value self, value other);
value atg___rshift__tensor_(value self, value other);
value atg___rshift__tensor_out_(value out, value self, value other);
value atg___xor__(value self, value other);
value atg___xor__tensor_(value self, value other);
value atg__adaptive_avg_pool2d(value self, value output_size);
value atg__adaptive_avg_pool2d_backward(value grad_output, value self);
value atg__adaptive_avg_pool2d_backward_out(value out, value grad_output, value self);
value atg__adaptive_avg_pool2d_out(value out, value self, value output_size);
value atg__adaptive_avg_pool3d(value self, value output_size);
value atg__adaptive_avg_pool3d_backward(value grad_output, value self);
value atg__adaptive_avg_pool3d_backward_out(value out, value grad_output, value self);
value atg__adaptive_avg_pool3d_out(value out, value self, value output_size);
value atg__add_batch_dim(value self, int64_t batch_dim, int64_t level);
value atg__add_relu(value self, value other, value alpha);
value atg__add_relu_(value self, value other, value alpha);
value atg__add_relu_out(value out, value self, value other, value alpha);
value atg__add_relu_scalar(value self, value other, value alpha);
value atg__add_relu_scalar_(value self, value other, value alpha);
value atg__add_relu_scalar_out(value out, value self, value other, value alpha);
value atg__addmm_activation(value self, value mat1, value mat2, value beta, value alpha, int use_gelu);
value atg__addmm_activation_out(value out, value self, value mat1, value mat2, value beta, value alpha, int use_gelu);
value atg__aminmax(value self);
value atg__aminmax_dim(value self, int64_t dim, int keepdim);
value atg__aminmax_dim_out(value out0, value out1, value self, int64_t dim, int keepdim);
value atg__aminmax_out(value out0, value out1, value self);
value atg__amp_update_scale(value self, value growth_tracker, value found_inf, double scale_growth_factor, double scale_backoff_factor, int64_t growth_interval);
value atg__amp_update_scale_(value self, value growth_tracker, value found_inf, double scale_growth_factor, double scale_backoff_factor, int64_t growth_interval);
value atg__amp_update_scale_out(value out, value self, value growth_tracker, value found_inf, double scale_growth_factor, double scale_backoff_factor, int64_t growth_interval);
void atg__assert_scalar(value self, const char * assert_msg);
void atg__assert_tensor_metadata(value a, value size, value stride, int dtype, int device);
value atg__autocast_to_full_precision(value self, int cuda_enabled, int cpu_enabled);
value atg__autocast_to_reduced_precision(value self, int cuda_enabled, int cpu_enabled, int cuda_dtype, int cpu_dtype);
value atg__batch_norm_no_update(value input, value weight, value bias, value running_mean, value running_var, double momentum, double eps);
value atg__batch_norm_no_update_out(value out0, value out1, value out2, value out3, value input, value weight, value bias, value running_mean, value running_var, double momentum, double eps);
value atg__batch_norm_with_update(value input, value weight, value bias, value running_mean, value running_var, double momentum, double eps);
value atg__batch_norm_with_update_functional(value input, value weight, value bias, value running_mean, value running_var, double momentum, double eps);
value atg__batch_norm_with_update_out(value out, value save_mean, value save_invstd, value reserve, value input, value weight, value bias, value running_mean, value running_var, double momentum, double eps);
value atg__cast_byte(value self, int non_blocking);
value atg__cast_char(value self, int non_blocking);
value atg__cast_double(value self, int non_blocking);
value atg__cast_float(value self, int non_blocking);
value atg__cast_half(value self, int non_blocking);
value atg__cast_int(value self, int non_blocking);
value atg__cast_long(value self, int non_blocking);
value atg__cast_short(value self, int non_blocking);
value atg__cdist_backward(value grad, value x1, value x2, double p, value cdist);
value atg__cdist_backward_out(value out, value grad, value x1, value x2, double p, value cdist);
value atg__cholesky_solve_helper(value self, value A, int upper);
value atg__cholesky_solve_helper_out(value out, value self, value A, int upper);
value atg__chunk_cat(value tensors, int64_t dim, int64_t num_chunks);
value atg__chunk_cat_out(value out, value tensors, int64_t dim, int64_t num_chunks);
value atg__coalesce(value self);
value atg__coalesce_out(value out, value self);
value atg__coalesced(value self, int coalesced);
value atg__coalesced_(value self, int coalesced);
value atg__coalesced_out(value out, value self, int coalesced);