src/bindings/torch_bindings_generated0.ml

(* THIS FILE IS AUTOMATICALLY GENERATED, DO NOT EDIT BY HAND! *)

open Ctypes

module C0 (F : Cstubs.FOREIGN) = struct
  open F
  open Type_defs

  let stubs___and__ = foreign "atg___and__" (gc_tensor @-> scalar @-> returning raw_tensor)

  let stubs___and__tensor_ =
    foreign "atg___and__tensor_" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs___iand__ =
    foreign "atg___iand__" (gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs___iand__tensor_ =
    foreign "atg___iand__tensor_" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs___ilshift__ =
    foreign "atg___ilshift__" (gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs___ilshift__tensor_ =
    foreign "atg___ilshift__tensor_" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs___ior__ = foreign "atg___ior__" (gc_tensor @-> scalar @-> returning raw_tensor)

  let stubs___ior__tensor_ =
    foreign "atg___ior__tensor_" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs___irshift__ =
    foreign "atg___irshift__" (gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs___irshift__tensor_ =
    foreign "atg___irshift__tensor_" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs___ixor__ =
    foreign "atg___ixor__" (gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs___ixor__tensor_ =
    foreign "atg___ixor__tensor_" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs___lshift__ =
    foreign "atg___lshift__" (gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs___lshift__scalar_out_ =
    foreign
      "atg___lshift__scalar_out_"
      (gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs___lshift__tensor_ =
    foreign "atg___lshift__tensor_" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs___lshift__tensor_out_ =
    foreign
      "atg___lshift__tensor_out_"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs___or__ = foreign "atg___or__" (gc_tensor @-> scalar @-> returning raw_tensor)

  let stubs___or__tensor_ =
    foreign "atg___or__tensor_" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs___rshift__ =
    foreign "atg___rshift__" (gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs___rshift__scalar_out_ =
    foreign
      "atg___rshift__scalar_out_"
      (gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs___rshift__tensor_ =
    foreign "atg___rshift__tensor_" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs___rshift__tensor_out_ =
    foreign
      "atg___rshift__tensor_out_"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs___xor__ = foreign "atg___xor__" (gc_tensor @-> scalar @-> returning raw_tensor)

  let stubs___xor__tensor_ =
    foreign "atg___xor__tensor_" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs__adaptive_avg_pool2d =
    foreign
      "atg__adaptive_avg_pool2d"
      (gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs__adaptive_avg_pool2d_backward =
    foreign
      "atg__adaptive_avg_pool2d_backward"
      (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs__adaptive_avg_pool2d_backward_out =
    foreign
      "atg__adaptive_avg_pool2d_backward_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs__adaptive_avg_pool2d_out =
    foreign
      "atg__adaptive_avg_pool2d_out"
      (gc_tensor @-> gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs__adaptive_avg_pool3d =
    foreign
      "atg__adaptive_avg_pool3d"
      (gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs__adaptive_avg_pool3d_backward =
    foreign
      "atg__adaptive_avg_pool3d_backward"
      (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs__adaptive_avg_pool3d_backward_out =
    foreign
      "atg__adaptive_avg_pool3d_backward_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs__adaptive_avg_pool3d_out =
    foreign
      "atg__adaptive_avg_pool3d_out"
      (gc_tensor @-> gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs__add_batch_dim =
    foreign
      "atg__add_batch_dim"
      (gc_tensor @-> int64_t @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs__add_relu =
    foreign "atg__add_relu" (gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs__add_relu_ =
    foreign "atg__add_relu_" (gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs__add_relu_out =
    foreign
      "atg__add_relu_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs__add_relu_scalar =
    foreign
      "atg__add_relu_scalar"
      (gc_tensor @-> scalar @-> scalar @-> returning raw_tensor)
  ;;

  let stubs__add_relu_scalar_ =
    foreign
      "atg__add_relu_scalar_"
      (gc_tensor @-> scalar @-> scalar @-> returning raw_tensor)
  ;;

  let stubs__add_relu_scalar_out =
    foreign
      "atg__add_relu_scalar_out"
      (gc_tensor @-> gc_tensor @-> scalar @-> scalar @-> returning raw_tensor)
  ;;

  let stubs__addmm_activation =
    foreign
      "atg__addmm_activation"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> scalar
       @-> scalar
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs__addmm_activation_out =
    foreign
      "atg__addmm_activation_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> scalar
       @-> scalar
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs__aminmax =
    foreign "atg__aminmax" (ptr raw_tensor @-> gc_tensor @-> returning void)
  ;;

  let stubs__aminmax_dim =
    foreign
      "atg__aminmax_dim"
      (ptr raw_tensor @-> gc_tensor @-> int64_t @-> int @-> returning void)
  ;;

  let stubs__aminmax_dim_out =
    foreign
      "atg__aminmax_dim_out"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int
       @-> returning void)
  ;;

  let stubs__aminmax_out =
    foreign
      "atg__aminmax_out"
      (ptr raw_tensor @-> gc_tensor @-> gc_tensor @-> gc_tensor @-> returning void)
  ;;

  let stubs__amp_update_scale =
    foreign
      "atg__amp_update_scale"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> double
       @-> double
       @-> int64_t
       @-> returning void)
  ;;

  let stubs__amp_update_scale_ =
    foreign
      "atg__amp_update_scale_"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> double
       @-> double
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs__amp_update_scale_out =
    foreign
      "atg__amp_update_scale_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> double
       @-> double
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs__assert_scalar =
    foreign "atg__assert_scalar" (scalar @-> string @-> returning void)
  ;;

  let stubs__assert_tensor_metadata =
    foreign
      "atg__assert_tensor_metadata"
      (gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int
       @-> int
       @-> returning void)
  ;;

  let stubs__autocast_to_full_precision =
    foreign
      "atg__autocast_to_full_precision"
      (gc_tensor @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs__autocast_to_reduced_precision =
    foreign
      "atg__autocast_to_reduced_precision"
      (gc_tensor @-> int @-> int @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs__batch_norm_no_update =
    foreign
      "atg__batch_norm_no_update"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> double
       @-> double
       @-> returning void)
  ;;

  let stubs__batch_norm_no_update_out =
    foreign
      "atg__batch_norm_no_update_out"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> double
       @-> double
       @-> returning void)
  ;;

  let stubs__batch_norm_with_update =
    foreign
      "atg__batch_norm_with_update"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> double
       @-> double
       @-> returning void)
  ;;

  let stubs__batch_norm_with_update_functional =
    foreign
      "atg__batch_norm_with_update_functional"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> double
       @-> double
       @-> returning void)
  ;;

  let stubs__batch_norm_with_update_out =
    foreign
      "atg__batch_norm_with_update_out"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> double
       @-> double
       @-> returning void)
  ;;

  let stubs__cast_byte =
    foreign "atg__cast_byte" (gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs__cast_char =
    foreign "atg__cast_char" (gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs__cast_double =
    foreign "atg__cast_double" (gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs__cast_float =
    foreign "atg__cast_float" (gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs__cast_half =
    foreign "atg__cast_half" (gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs__cast_int =
    foreign "atg__cast_int" (gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs__cast_long =
    foreign "atg__cast_long" (gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs__cast_short =
    foreign "atg__cast_short" (gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs__cdist_backward =
    foreign
      "atg__cdist_backward"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> double
       @-> gc_tensor
       @-> returning raw_tensor)
  ;;

  let stubs__cdist_backward_out =
    foreign
      "atg__cdist_backward_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> double
       @-> gc_tensor
       @-> returning raw_tensor)
  ;;

  let stubs__cholesky_solve_helper =
    foreign
      "atg__cholesky_solve_helper"
      (gc_tensor @-> gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs__cholesky_solve_helper_out =
    foreign
      "atg__cholesky_solve_helper_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs__chunk_cat =
    foreign
      "atg__chunk_cat"
      (ptr gc_tensor @-> int @-> int64_t @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs__chunk_cat_out =
    foreign
      "atg__chunk_cat_out"
      (gc_tensor
       @-> ptr gc_tensor
       @-> int
       @-> int64_t
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs__coalesce = foreign "atg__coalesce" (gc_tensor @-> returning raw_tensor)

  let stubs__coalesce_out =
    foreign "atg__coalesce_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs__coalesced =
    foreign "atg__coalesced" (gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs__coalesced_ =
    foreign "atg__coalesced_" (gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs__coalesced_out =
    foreign "atg__coalesced_out" (gc_tensor @-> gc_tensor @-> int @-> returning raw_tensor)
  ;;
